@@ -1,5 +1,6 @@
 2012-09-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
+	* menu.py: Added support for opening conversation in other column.
 	* preferences.py: Save the geometry of the preferences window.
 	* feedsource.py: Added a new GSettings key 'recent-target'.
 	* window.py: Fixed a wrong position problem when auto-start.
